--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
 
         <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
 
-
-        <ul>
-          <li><a href="https://github.com/OpenGrok/OpenGrok/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/OpenGrok/OpenGrok/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/OpenGrok/OpenGrok">View On <strong>GitHub</strong></a></li>
-        </ul>
       </header>
       <section>
         <h3>OpenGrok</h3>
@@ -44,8 +38,10 @@ written in Java.
 
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/OpenGrok">OpenGrok</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This project is maintained by
+	<a href="https://github.com/OpenGrok">OpenGrok</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by
+	<a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
