add first wiki link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@ source code and is developed in the open, hence the name OpenGrok. It is
 written in Java.
 </p>
 
+<ul>
+  <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Revision-Control-Systems">Supported Revision Control Systems</a>
+  </li>
+</ul>
+
       </section>
       <footer>
         <p>This project is maintained by
