more wiki links

--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
     <div class="wrapper">
       <header>
         <h1>{OpenGrok</h1>
-        <p>Main {OpenGrok git repository</p>
+        <p>"A wicked fast source browser"</p>
 
         <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
 
       </header>
       <section>
         <h3>OpenGrok</h3>
-
-<p>"A wicked fast source browser"</p>
 
 <p>
 OpenGrok is a fast and usable source code search and cross reference engine. It
@@ -36,9 +34,33 @@ source code and is developed in the open, hence the name OpenGrok. It is
 written in Java.
 </p>
 
+<p>
+Wiki pages:
+</p>
+
 <ul>
   <li>
   <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Revision-Control-Systems">Supported Revision Control Systems</a>
+  </li>
+  
+  <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Languages-and-Formats">Supported Languages and Formats</a>
+  </li>
+
+  <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/How-to-build-OpenGrok-from-source">How to build OpenGrok from source</a>
+  </li>
+
+  <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/How-to-install-OpenGrok">How to install OpenGrok</a>
+  </li>
+
+  <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/OpenGrok-Internals">Internals</a>
+  </li>
+
+  <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Story-of-OpenGrok">Story of OpenGrok</a>
   </li>
 </ul>
 
