--- a/index.html
+++ b/index.html
@@ -35,6 +35,40 @@ written in Java.
 </p>
 
 <p>
+Downloads:
+</p>
+
+<ul>
+  <li>
+  <a href="files/opengrok-0.11.1.tar.gz">opengrok-0.11.1.tar.gz</a> - Binaries only
+  </li>
+  <li>
+  <a href="files/opengrok-0.11.1-src.tar.gz">opengrok-0.11.1-src.tar.gz</a> - Source only
+  </li>
+  <li>
+  <a href="files/OSOLopengrok-0.11.1.pkg">OSOLopengrok-0.11.1.pkg</a> - Solaris Package
+  </li>
+</ul>
+
+<p>
+Requirements:
+</p>
+
+<ul>
+  <li>
+  Latest <a href="http://www.oracle.com/technetwork/java//">Java</a> (1.6 , 1.7 will not work with {OpenGrok versions &lt; 0.12)
+  </li>
+
+  <li>
+  A servlet container like <a href="https://glassfish.dev.java.net/">GlassFish</a> or <a href="http://tomcat.apache.org/">Tomcat</a> (6.x, 7.x or later) also running with Java at least 1.6
+  </li>
+
+  <li>
+  <a href="http://ctags.sourceforge.net/">Exuberant Ctags</a>
+  </li>
+</ul>
+
+<p>
 Wiki pages:
 </p>
 
