add communication and licensing info

--- a/index.html
+++ b/index.html
@@ -98,6 +98,45 @@ Wiki pages:
   </li>
 </ul>
 
+<p>
+Communication:
+</p>
+
+<ul>
+<!--
+Send your ideas for improvement or contributions to OpenGrok-discuss mailing
+list.
+-->
+  <li>
+  Bugs or feature requests should be reported via
+  <a href="https://github.com/OpenGrok/OpenGrok/issues">Issues</a>.
+  </li>
+
+  <li>
+  OpenGrok related blogs can be found using the
+  <a href="http://blogs.oracle.com/main/tags/opengrok">opengrok tag</a>.
+  </li>
+
+  <li>
+  Join the OpenGrok users group on <a href="http://linkedin.com/">LinkedIn</a>.
+  </li>
+
+  <li>
+  See the summary of the project on 
+  <a href="http://www.ohloh.net/p/opengrok">Ohloh</a>.
+  </li>
+</ul>
+
+<p>
+License:
+</p>
+
+<p>
+OpenGrok is an open source project and is distributed under
+<a href="http://www.opensource.org/licenses/cddl1.php">CDDL</a>.
+OpenGrok uses software libraries from <a href="http://apache.org/">Apache Software Foundation</a>.
+</p>
+
       </section>
       <footer>
         <p>This project is maintained by
