add features link

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@ Wiki pages:
 
 <ul>
   <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Features">Features</a>
+  </li>
+
+  <li>
   <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Revision-Control-Systems">Supported Revision Control Systems</a>
   </li>
   
