--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
 
       </header>
+
+<!-- XXX add screenshots -->
+
       <section>
         <h3>OpenGrok</h3>
 
