add comparison link

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@ Wiki pages:
   </li>
 
   <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Comparison-with-Similar-Tools">Comparison with Similar Tools</a>
+  </li>
+
+  <li>
   <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Revision-Control-Systems">Supported Revision Control Systems</a>
   </li>
   
