--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>{OpenGrok</h1>
+        <img src="images/opengrok-logo.png">
         <p>"A wicked fast source browser"</p>
 
         <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
@@ -25,7 +25,7 @@
 <!-- XXX add screenshots -->
 
       <section>
-        <h3>OpenGrok</h3>
+        <h2>{OpenGrok</h2>
 
 <p>
 OpenGrok is a fast and usable source code search and cross reference engine. It
