--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
 
-        <img src="images/opengrok-scr1_small.png"><br/>
-        <img src="images/opengrok-scr2_small.png">
+        <img width=200px src="images/opengrok-scr1_small.png">
+        <!-- <img src="images/opengrok-scr2_small.png"> -->
 
       </header>
 
