add the section back

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- <img src="images/opengrok-scr2_small.png"> -->
 
       </header>
-
+      <section>
         <h2>{OpenGrok</h2>
 
 <p>
