add second image and links

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
         <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
 
-        <img src="images/opengrok-scr1_small.png">
-        <!-- <img src="images/opengrok-scr2_small.png"> -->
+	<a href="images/opengrok-scr1.png">
+          <img src="images/opengrok-scr1_small.png">
+	</a>
+	<a href="images/opengrok-scr2.png">
+          <img src="images/opengrok-scr2_small.png">
+	</a>
 
       </header>
       <section>
