add some comments

--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
 
         <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
 
+	<!--
+		Note: the images should have width at most 270px to match
+		      the style of the header element.
+	-->
 	<a href="images/opengrok-scr1.png">
           <img src="images/opengrok-scr1_small.png">
 	</a>
 	<a href="images/opengrok-scr2.png">
           <img src="images/opengrok-scr2_small.png">
 	</a>
+
+	<!-- XXX add some users of OpenGrok here -->
 
       </header>
       <section>
