change first batch of links from opensolaris.org to github project pages

--- a/web/index_body.html
+++ b/web/index_body.html
@@ -7,9 +7,9 @@ href="xref/">browsable and searchable source tree</a> (<a
 href="xref/">xref/</a>).</p>
 
 <p>
-To setup and configure OpenGrok please refer to <a 
-href="http://www.opensolaris.org/os/project/opengrok/"
->http://www.opensolaris.org/os/project/opengrok/</a> or README.txt in the 
+To setup and configure OpenGrok please refer to
+<a href="http://opengrok.github.com/OpenGrok/">
+http://opengrok.github.com/OpenGrok/</a> or README.txt in the 
 distribution.</p>
 
 <p>
