mention code from CollabNet

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@ License:
 OpenGrok is an open source project and is distributed under
 <a href="http://www.opensource.org/licenses/cddl1.php">CDDL</a>.
 OpenGrok uses software libraries from <a href="http://apache.org/">Apache Software Foundation</a>.
+This product includes software developed by
+<a href="http://www.collab.net/">CollabNet</a>.
 </p>
 
       </section>
