--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@ Downloads:
 
 <ul>
   <li>
-  <a href="files/opengrok-0.11.1.tar.gz">opengrok-0.11.1.tar.gz</a> - Binaries only
+  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.11.1.tar.gz">opengrok-0.11.1.tar.gz</a> - Binaries only
   </li>
   <li>
-  <a href="files/opengrok-0.11.1-src.tar.gz">opengrok-0.11.1-src.tar.gz</a> - Source only
+  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.11.1-src.tar.gz">opengrok-0.11.1-src.tar.gz</a> - Source only
   </li>
   <li>
-  <a href="files/OSOLopengrok-0.11.1.pkg">OSOLopengrok-0.11.1.pkg</a> - Solaris Package
+  <a href="http://java.net/projects/opengrok/downloads/download/OSOLopengrok-0.11.1.pkg">OSOLopengrok-0.11.1.pkg</a> - Solaris Package
   </li>
 </ul>
 
