--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
           <img src="images/opengrok-scr2_small.png">
 	</a>
 
-	<!-- XXX add some users of OpenGrok here -->
+	<p>
+	Some of OpenGrok users:
+	<a href="http://nxr.netbsd.org/">NetBSD</a>,
+	<a href="http://svn.services.openoffice.org/opengrok/">OpenOffice</a>,
+	<a href="http://lxr.php.net/">PHP</a>,
+	<a href="http://grok.openkomodo.com/">Openkomodo</a>,
+	<a href="http://src.illumos.org/source/">Illumos</a>
+	</p>
 
       </header>
       <section>
