add link to discussions

--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@ Communication:
 </p>
 
 <ul>
-<!--
-Send your ideas for improvement or contributions to OpenGrok-discuss mailing
-list.
--->
+  <li>
+  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Discussions">Discussions
+  (mailing lists, etc.)</a>
+  </li>
+
   <li>
   Bugs or feature requests should be reported via
   <a href="https://github.com/OpenGrok/OpenGrok/issues">Issues</a>.
