relink downloads to releases

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ written in Java.
 </p>
 
 <p>
-Downloads:
+Downloads: see <a href="https://github.com/OpenGrok/OpenGrok/releases">releases</a>.
+For archives go to <a href="http://java.net/projects/opengrok/downloads/">downloads at java.net</a>.
 </p>
 
 <ul>
