update links for 0.12 release

--- a/index.html
+++ b/index.html
@@ -61,13 +61,16 @@ For archives go to <a href="http://java.net/projects/opengrok/downloads/">downlo
 
 <ul>
   <li>
-  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.11.1.tar.gz">opengrok-0.11.1.tar.gz</a> - Binaries only
+  <a href="https://github.com/OpenGrok/OpenGrok/archive/0.12.tar.gz">OpenGrok-0.12.tar.gz</a> - Source distribution
   </li>
   <li>
-  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.11.1-src.tar.gz">opengrok-0.11.1-src.tar.gz</a> - Source only
+  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.12.tar.gz">opengrok-0.12.tar.gz</a> - Binary distribution
   </li>
   <li>
-  <a href="http://java.net/projects/opengrok/downloads/download/OSOLopengrok-0.11.1.pkg">OSOLopengrok-0.11.1.pkg</a> - Solaris Package
+  <a href="http://java.net/projects/opengrok/downloads/download/OSOLopengrok-0.12.pkg">OSOLopengrok-0.12.pkg</a> - Solaris 10 Package
+  </li>
+  <li>
+  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.12.p5p">opengrok-0.12.p5p</a> - Solaris 11 Package
   </li>
 </ul>
 
