--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ Requirements:
 
 <ul>
   <li>
-  Latest <a href="http://www.oracle.com/technetwork/java//">Java</a> (1.6 , 1.7 will not work with {OpenGrok versions &lt; 0.12)
+  Latest <a href="http://www.oracle.com/technetwork/java//">Java</a> 1.7
   </li>
 
   <li>
-  A servlet container like <a href="https://glassfish.dev.java.net/">GlassFish</a> or <a href="http://tomcat.apache.org/">Tomcat</a> (6.x, 7.x or later) also running with Java at least 1.6
+  A servlet container like <a href="https://glassfish.dev.java.net/">GlassFish</a> or <a href="http://tomcat.apache.org/">Tomcat</a> (6.x, 7.x or later) also running with Java at least 1.7
   </li>
 
   <li>
