--- a/web/index_body.html
+++ b/web/index_body.html
@@ -1,10 +1,10 @@
 <p>
-<b>OpenGrok - a "wicked fast" source browser!</b></p>
+<b>OpenGrok - a "wicked fast" source browser</b></p>
 
 <p>
-This is the front page of your <a 
-href="xref/">browsable and searchable source tree</a> (<a 
-href="xref/">xref/</a>).</p>
+This is the front page of your
+<a href="xref/">browsable</a> and searchable source tree.
+</p>
 
 <p>
 To setup and configure OpenGrok please refer to
@@ -17,8 +17,4 @@ You can replace this block of text (in index_body.html) with some more useful
 information about your source tree and its organization, with direct 
 links to key parts of code base.
 </p>
-<br/>
-<br/>
-<br/>
-<br/>
 <br/>
