simplify the download links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <img src="images/opengrok-logo.png">
         <p>"A wicked fast source browser"</p>
 
-        <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub <small>OpenGrok/OpenGrok</small></a></p>
+        <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub
+	<small>OpenGrok/OpenGrok</small></a></p>
 
 	<!--
 		Note: the images should have width at most 270px to match
@@ -56,23 +57,7 @@ written in Java.
 
 <p>
 Downloads: see <a href="https://github.com/OpenGrok/OpenGrok/releases">releases</a>.
-For archives go to <a href="http://java.net/projects/opengrok/downloads/">downloads at java.net</a>.
 </p>
-
-<ul>
-  <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/archive/0.12.1.5.tar.gz">OpenGrok-0.12.1.5.tar.gz</a> - Source distribution
-  </li>
-  <li>
-  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.12.1.5.tar.gz">opengrok-0.12.1.5.tar.gz</a> - Binary distribution
-  </li>
-  <li>
-  <a href="http://java.net/projects/opengrok/downloads/download/OSOLopengrok-0.12.1.5.pkg">OSOLopengrok-0.12.1.5.pkg</a> - Solaris 10 Package
-  </li>
-  <li>
-  <a href="http://java.net/projects/opengrok/downloads/download/opengrok-0.12.1.5.p5p">opengrok-0.12.1.5.p5p</a> - Solaris 11 Package
-  </li>
-</ul>
 
 <p>
 Requirements:
@@ -84,7 +69,8 @@ Requirements:
   </li>
 
   <li>
-  A servlet container like <a href="https://glassfish.dev.java.net/">GlassFish</a> or <a href="http://tomcat.apache.org/">Tomcat</a> (6.x, 7.x or later) also running with Java at least 1.7
+  A servlet container like <a href="https://glassfish.dev.java.net/">GlassFish</a>
+  or <a href="http://tomcat.apache.org/">Tomcat</a> (6.x, 7.x or later) also running with Java at least 1.7
   </li>
 
   <li>
@@ -108,7 +94,7 @@ Wiki pages:
   <li>
   <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Revision-Control-Systems">Supported Revision Control Systems</a>
   </li>
-  
+
   <li>
   <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Languages-and-Formats">Supported Languages and Formats</a>
   </li>
@@ -155,7 +141,7 @@ Communication:
   </li>
 
   <li>
-  See the summary of the project on 
+  See the summary of the project on
   <a href="http://www.ohloh.net/p/opengrok">Ohloh</a>.
   </li>
 </ul>
