--- a/jrcs/src/main/java/org/apache/commons/jrcs/diff/package.html
+++ b/jrcs/src/main/java/org/apache/commons/jrcs/diff/package.html
@@ -84,7 +84,7 @@
       <li>
         {@link SimpleDiff Simple Diff} is a verys imple algorithm that
         is fast and works well with very large input sequences, but
-        that frequently produces result that are subotimal (at times
+        that frequently produces result that are suboptimal (at times
         four or more times larger than GNU diff).
       </li>
       <li>
