Recognize Perl special identifiers, and format as keywords

--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -291,5 +291,8 @@
 <a class="l" name="284" href="#284">284</a>$s = $ {<a href="/source/s?defs=var" class="intelliWindow-symbol" data-definition-place="undefined-in-file">var</a>};
 <a class="l" name="285" href="#285">285</a>$s = ${ <a href="/source/s?defs=var" class="intelliWindow-symbol" data-definition-place="undefined-in-file">var</a> };
 <a class="l" name="286" href="#286">286</a><b>print</b> <b>qr</b><span class="s"> z$<a href="/source/s?defs=abc" class="intelliWindow-symbol" data-definition-place="undefined-in-file">abc</a>z</span>ix, <a href="/source/s?defs=" class="intelliWindow-symbol" data-definition-place="undefined-in-file"></a><span class="s">&quot;\n&quot;</span>;
-<a class="l" name="287" href="#287">287</a></body>
+<a class="l" name="287" href="#287">287</a><b>print</b> <b>$0</b> <b>if</b> <b>$!</b>;
+<a class="l" name="288" href="#288">288</a><b>print</b> <b>$^V</b>;
+<a class="l" name="289" href="#289">289</a><b>print</b> <a href="/source/s?defs=" class="intelliWindow-symbol" data-definition-place="undefined-in-file"></a><span class="s">&quot;<b>${^GLOBAL_PHASE}</b> is what?&quot;</span>;
+<a class="hl" name="290" href="#290">290</a></body>
 </html>
