Fix to detect if an {SPIdentifier*} grabbed the `endqchar'

--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -294,5 +294,8 @@
 <a class="l" name="287" href="#287">287</a><b>print</b> <b>$0</b> <b>if</b> <b>$!</b>;
 <a class="l" name="288" href="#288">288</a><b>print</b> <b>$^V</b>;
 <a class="l" name="289" href="#289">289</a><b>print</b> <a href="/source/s?defs=" class="intelliWindow-symbol" data-definition-place="undefined-in-file"></a><span class="s">&quot;<b>${^GLOBAL_PHASE}</b> is what?&quot;</span>;
-<a class="hl" name="290" href="#290">290</a></body>
+<a class="hl" name="290" href="#290">290</a>
+<a class="l" name="291" href="#291">291</a><span class="c"># more quote-like tests</span>
+<a class="l" name="292" href="#292">292</a><b>qr</b><span class="s">{\.[a-z]+$}</span>i;
+<a class="l" name="293" href="#293">293</a></body>
 </html>
