--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -303,5 +303,8 @@
 <a class="l" name="296" href="#296">296</a><span class="s">	Some text</span>
 <a class="l" name="297" href="#297">297</a><span class="s"></span>EOF
 <a class="l" name="298" href="#298">298</a><span class="s">/\b sentinel \b/</span> &amp;&amp; <b>print</b>; <span class="c"># This should heuristically match as m//</span>
-<a class="l" name="299" href="#299">299</a></body>
+<a class="l" name="299" href="#299">299</a>
+<a class="hl" name="300" href="#300">300</a><span class="c"># spaced sigil</span>
+<a class="l" name="301" href="#301">301</a>$ <a href="/source/s?defs=svar" class="intelliWindow-symbol" data-definition-place="undefined-in-file">svar</a> = <span class="n">1</span>;
+<a class="l" name="302" href="#302">302</a></body>
 </html>
