--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -306,5 +306,8 @@
 <a class="l" name="299" href="#299">299</a>
 <a class="hl" name="300" href="#300">300</a><span class="c"># spaced sigil</span>
 <a class="l" name="301" href="#301">301</a>$ <a href="/source/s?defs=svar" class="intelliWindow-symbol" data-definition-place="undefined-in-file">svar</a> = <span class="n">1</span>;
-<a class="l" name="302" href="#302">302</a></body>
+<a class="l" name="302" href="#302">302</a>
+<a class="l" name="303" href="#303">303</a><span class="c"># more quote-like tests</span>
+<a class="l" name="304" href="#304">304</a><b>s</b><span class="s">{\.[a-z]+$}{no}</span>i;
+<a class="l" name="305" href="#305">305</a></body>
 </html>
