Fix to split out {SPIdentifier2Quo} and {SPIdentifier2Xquo}

--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -355,5 +355,8 @@
 <a class="l" name="348" href="#348">348</a><span class="s">	and k3 = &quot;$t -&gt;[ 0 ]-&gt;{ v }&quot;</span>
 <a class="l" name="349" href="#349">349</a><span class="s">	and k4 = &quot;$u -&gt;{ k }-&gt;[ 0 ]&quot;</span>
 <a class="hl" name="350" href="#350">350</a><span class="s">	order by value_date DESC]</span>;
-<a class="l" name="351" href="#351">351</a></body>
+<a class="l" name="351" href="#351">351</a><b>push</b> @$<a href="/source/s?defs=html" class="intelliWindow-symbol" data-definition-place="undefined-in-file">html</a>, <span class="s">&quot;&lt;TD width=\&quot;20%\&quot;&gt;&quot;</span>;
+<a class="l" name="352" href="#352">352</a><b>print</b> <span class="s">&quot;%\abc\n&quot;</span>, <b>%\</b>, <span class="s">&quot;abc\n&quot;</span>;
+<a class="l" name="353" href="#353">353</a><span class="c"># some comment</span>
+<a class="l" name="354" href="#354">354</a></body>
 </html>
