Exclude the single-char quote/comment tokens from {WxSigils}

--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -358,5 +358,7 @@
 <a class="l" name="351" href="#351">351</a><b>push</b> @$<a href="/source/s?defs=html" class="intelliWindow-symbol" data-definition-place="undefined-in-file">html</a>, <span class="s">&quot;&lt;TD width=\&quot;20%\&quot;&gt;&quot;</span>;
 <a class="l" name="352" href="#352">352</a><b>print</b> <span class="s">&quot;%\abc\n&quot;</span>, <b>%\</b>, <span class="s">&quot;abc\n&quot;</span>;
 <a class="l" name="353" href="#353">353</a><span class="c"># some comment</span>
-<a class="l" name="354" href="#354">354</a></body>
+<a class="l" name="354" href="#354">354</a><b>push</b> @<a href="/source/s?defs=arr" class="intelliWindow-symbol" data-definition-place="undefined-in-file">arr</a>, <span class="s">&quot;&apos;$<a href="/source/s?defs=key" class="intelliWindow-symbol" data-definition-place="undefined-in-file">key</a>&apos;=&gt;&quot;</span> . <span class="s">&apos;q[&apos;</span> . $<a href="/source/s?defs=val" class="intelliWindow-symbol" data-definition-place="undefined-in-file">val</a> . <span class="s">&apos;],&apos;</span>;
+<a class="l" name="355" href="#355">355</a><span class="c">#qq[$var]</span>
+<a class="l" name="356" href="#356">356</a></body>
 </html>
