Fix to make format= more restrictive

--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -380,5 +380,14 @@
 <a class="l" name="373" href="#373">373</a><b>for</b> <b>my</b> $k (<b>grep</b> <span class="s">/=/</span>, <b>split</b> <span class="s">/;/</span>, $d, -<span class="n">1</span>) {
 <a class="l" name="374" href="#374">374</a>	<b>print</b> <span class="s">&quot;1\n&quot;</span>;
 <a class="l" name="375" href="#375">375</a>}
-<a class="l" name="376" href="#376">376</a></body>
+<a class="l" name="376" href="#376">376</a>
+<a class="l" name="377" href="#377">377</a><span class="c"># more format tests</span>
+<a class="l" name="378" href="#378">378</a>%a = (
+<a class="l" name="379" href="#379">379</a>    <b>format</b> =&gt; <span class="s">&quot;%s&quot;</span>);
+<a class="hl" name="380" href="#380">380</a><b> format</b>=<span class="s"></span>
+<a class="l" name="381" href="#381">381</a><span class="s">@&lt;&lt;&lt;&lt;&lt;&lt;   @||||||   @&gt;&gt;&gt;&gt;&gt;&gt;</span>
+<a class="l" name="382" href="#382">382</a><span class="s">&quot;left&quot;,  &quot;middle&quot;, &quot;right&quot;</span>
+<a class="l" name="383" href="#383">383</a><span class="s">.</span>
+<a class="l" name="384" href="#384">384</a><b>print</b> <span class="s">&quot;1\n&quot;</span>;
+<a class="l" name="385" href="#385">385</a></body>
 </html>
