--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -141,8 +141,8 @@
 <a class="l" name="134" href="#134">134</a><span class="s"></span>bar
 <a class="l" name="135" href="#135">135</a>
 <a class="l" name="136" href="#136">136</a><a href="/source/s?defs=myfunc" class="intelliWindow-symbol" data-definition-place="undefined-in-file">myfunc</a>(&lt;&lt; &quot;THIS&quot;, <span class="n">23</span>, &lt;&lt;&apos;THAT&apos;);<span class="s"></span>
-<a class="l" name="137" href="#137">137</a><span class="s">Here&apos;s a line</span>
-<a class="l" name="138" href="#138">138</a><span class="s">or two.</span>
+<a class="l" name="137" href="#137">137</a><span class="s">Here&apos;s a line or</span>
+<a class="l" name="138" href="#138">138</a><span class="s">two</span>
 <a class="l" name="139" href="#139">139</a><span class="s"></span>THIS<span class="s"></span>
 <a class="hl" name="140" href="#140">140</a><span class="s">and here&apos;s another.</span>
 <a class="l" name="141" href="#141">141</a><span class="s"></span>THAT
