--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -325,7 +325,7 @@
 <a class="l" name="318" href="#318">318</a><span class="c"># format FORMLIST tests</span>
 <a class="l" name="319" href="#319">319</a><b> format</b> STDOUT =<span class="s"></span>
 <a class="hl" name="320" href="#320">320</a><span class="s">@&lt;&lt;&lt;&lt;&lt;&lt;   @||||||   @&gt;&gt;&gt;&gt;&gt;&gt;</span>
-<a class="l" name="321" href="#321">321</a><span class="s"><span class="c"># comment &lt;args to follow&gt;</span></span>
+<a class="l" name="321" href="#321">321</a><span class="s"></span><span class="c"># comment &lt;args to follow&gt;</span>
 <a class="l" name="322" href="#322">322</a><span class="s">&quot;left&quot;,  substr($<a href="/source/s?defs=var" class="intelliWindow-symbol" data-definition-place="undefined-in-file">var</a>, 0, 2), &quot;\$right&quot;</span>
 <a class="l" name="323" href="#323">323</a><span class="s"> ...</span>
 <a class="l" name="324" href="#324">324</a><span class="s"> print</span>
